Fix for some color contrast bugs and li not being in a ul

--- a/src/documentation/sass/CodeBlock.scss
+++ b/src/documentation/sass/CodeBlock.scss
@@ -59,7 +59,7 @@
     background: $ms-color-neutralDark;
     color: $ms-color-white;
   }
-  .hljs-comment, .hljs-quote {
+  .hljs-quote {
     color: #777;
   }
   .hljs-variable, .hljs-template-variable, .hljs-tag, .hljs-regexp, .hljs-meta, .hljs-number, .hljs-built_in, .hljs-builtin-name, .hljs-literal, .hljs-params, .hljs-symbol, .hljs-bullet, .hljs-link, .hljs-deletion, .hljs-attr {
@@ -87,7 +87,7 @@
   .hljs, .hljs-subst, .hljs-tag, .hljs-attr {
     color: #434f54;
   }
-  .hljs-keyword, .hljs-attribute, .hljs-selector-tag, .hljs-doctag, .hljs-name {
+  .hljs-keyword, .hljs-attribute, .hljs-selector-tag, .hljs-doctag {
     color: #00979D;
   }
   .hljs-built_in, .hljs-literal, .hljs-bullet, .hljs-code, .hljs-addition {
@@ -96,7 +96,7 @@
   .hljs-regexp, .hljs-symbol, .hljs-variable, .hljs-template-variable, .hljs-link, .hljs-selector-attr, .hljs-selector-pseudo {
     color: #00979D;
   }
-  .hljs-type, .hljs-string, .hljs-selector-id, .hljs-selector-class, .hljs-quote, .hljs-template-tag, .hljs-deletion {
+  .hljs-type, .hljs-string, .hljs-selector-id, .hljs-selector-class, .hljs-quote, .hljs-template-tag, .hljs-deletion, .hljs-name {
     color: #005C5F;
   }
   .hljs-title, .hljs-section {
