--- a/src/documentation/sass/ComponentPage.scss
+++ b/src/documentation/sass/ComponentPage.scss
@@ -105,7 +105,7 @@ $dontColor: #A61E22;
   }
 
   .reactLink {
-    color: $ms-color-themePrimary;
+    color: #0078d4;
   }
 }
 
